fixes issue where images were disappearing on small screens

--- a/public/style/style.scss
+++ b/public/style/style.scss
@@ -62,9 +62,11 @@ a:hover{
   text-align: center;
 }
 .feature-img{
+  position: relative;
   margin: 0 auto;
 }
 .show-img{
+  position: relative;
   cursor: auto;
 }
 #hide-field{
@@ -199,8 +201,8 @@ background: $highlight;
 }
 @media screen and (max-width: 600px){
   .show-img, .feature-img{
-    height: 100%;
-    width: 100%;
+    max-height: 100%;
+    max-width: 100%;
   }
   .thumb-holder{
     height: 100%;
